Added api controller

--- a/auth/Views/Account/Login.cshtml
+++ b/auth/Views/Account/Login.cshtml
@@ -1,4 +1,4 @@
-﻿@model Api.Models.AuthenticationRequest
+﻿@model Api.Models.LoginRequest
 @{}
 <form asp-controller="Account" asp-action="Login" asp-antiforgery="true">
 	<div>
