--- a/auth/Views/Cabinet/GetInfo.cshtml
+++ b/auth/Views/Cabinet/GetInfo.cshtml
@@ -7,4 +7,6 @@
 		<li>@claim.Type @claim.Value</li>
 	}
 </ul>
-<a asp-controller="Cabinet" asp-action="LogOut">Выйти</a>
+<form asp-controller="Cabinet" asp-action="LogOut">
+	<input type="submit" value="Выйти">
+</form>
